@@ -1,13 +1,18 @@
 [% SET
    stylesheets = [ c.uri_for('/static/main.css') ]
    title = 'Login'
--%]
+   return_to = c.req.param('return_to')
+%]
+[% IF return_to.length == 0 AND c.req.referer AND c.req.referer != c.uri_for(c.controller('Authentication').action_for('login')) %]
+  [% SET return_to = c.req.referer %]
+[% END -%]
 
 [% IF authentication_error %]
 <p>Error: Invalid username or password.</p>
 [% END -%]
 
 <form method="post" id="login">
+  <input type="hidden" name="return_to" value="[% return_to | html %]" />
   <label for="username">Username:</label> <input type="text" name="username" id="username" /><br />
   <label for="password">Password:</label> <input type="password" name="password" id="password" /><br />
   <input type="submit" class="submit" value="Login" />
