@@ -9,6 +9,7 @@ This file documents the revision history for UFL::Phonebook.
         - Update root/people/view.tt to reflect LDAP data moving
           around
         - Add homePostalAddress to list of inflations on ::Entry
+        - Redirect to previous location on login
 
 0.22  Fri Oct 19 12:51:11 EDT 2007
         - Say "Not Available" instead of "Unknown" for search results
